// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H3 component should accept and render passed in styles 1`] = `
<h3
  className="kg5xj7-0 cDuHyO ui-kit-typography-H3-StyledH3"
  style={
    Object {
      "color": "salmon",
    }
  }
>
  Salmon text
</h3>
`;

exports[`the H3 component should render 1`] = `
<h3
  className="kg5xj7-0 cDuHyO ui-kit-typography-H3-StyledH3"
>
  Default H3 text
</h3>
`;

exports[`the H3 component should render a loading state 1`] = `
<mark
  className="ra2rjz-0 gcMOrm show-loading-animation kg5xj7-1 iJtpGA ui-kit-H1-Placeholder ui-kit.Placeholder.Line custom-placeholder"
  width="100%"
/>
`;

exports[`the H3 component should render a loading state with vertical rhythm (padded) 1`] = `
<mark
  className="ra2rjz-0 gcMOrm show-loading-animation kg5xj7-1 crOWIg ui-kit-H1-Placeholder ui-kit.Placeholder.Line custom-placeholder"
  width="100%"
/>
`;

exports[`the H3 component should render with vertical rhythm (padded) 1`] = `
<h3
  className="kg5xj7-0 dARTkK ui-kit-typography-H3-StyledH3"
>
  H3 text with vertical rhythm styled via margin.
</h3>
`;
